Start integrating with Server Manager

--- a/package.json
+++ b/package.json
@@ -7,18 +7,48 @@
   "engines": {
     "vscode": "^1.92.0"
   },
+  "contributors": [
+    {
+      "name": "John Murray",
+      "email": "johnm@georgejames.com"
+    }
+  ],
+  "sponsor": {
+    "url": "https://github.com/sponsors/gjsjohnmurray"
+  },
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onView:intersystems-community_servermanager"
+  ],
+  "extensionDependencies": [
+    "intersystems-community.servermanager"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "iris-rest-api-explorer.helloWorld",
-        "title": "Hello World"
+        "command": "iris-rest-api-explorer.intersystems-servermanager",
+        "title": "REST API Explorer",
+        "icon": "$(json)"
       }
-    ]
+    ],
+    "menus": {
+      "view/item/context": [
+        {
+          "command": "iris-rest-api-explorer.intersystems-servermanager",
+          "when": "view == intersystems-community_servermanager && viewItem =~ /\\.server\\./",
+          "group": "inline@20"
+        }
+      ],
+      "commandPalette": [
+        {
+          "command": "iris-rest-api-explorer.intersystems-servermanager",
+          "when": "false"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
@@ -32,6 +62,9 @@
     "test": "vscode-test"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "axios-cookiejar-support": "^5.0.2",
+    "tough-cookie": "^5.0.0",
     "swagger-ui-dist": "~5.17.14"
   },
   "devDependencies": {
@@ -43,7 +76,7 @@
     "eslint": "^8.57.0",
     "typescript": "^5.4.5",
     "ts-loader": "^9.5.1",
-    "webpack": "^5.92.1",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.4.0"
